Remove unnecessary code

--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -13,7 +13,7 @@
   color: #212529;
   text-decoration: none;
   background-color: #fff;
-  border: solid rgba(0,0,0,.125); // 1px 
+  border: solid rgba(0,0,0,.125);
   border-width: 0 0 1px;
 }
 
